remove tree module